package parkhausInterfaces;
import java.util.List;

public interface BerechnungIF
{
	public void addCost(float cost);
	
	public List<Float> getCosts();
	
	public int getSize();
}
