package parkhausKlassen;

public class TestKlasse {

}
